--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./asset/styles/style.css">
+    <link rel="stylesheet" href="./asset/styles/index.css">
 </head>
 
 <body>
@@ -54,18 +54,20 @@
     <main>
         <section class="section1">
             <div class="s1-left-container">
-                <div class="titre">
-                    <h2>Discover</h2>
-                    <h3>Our store</h3>
-                </div>
-                <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img couverts"></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cupiditate ex corporis repellat
-                    soluta officiis quidem dicta? Numquam excepturi distinctio enim quidem, laborum quisquam saepe
-                    libero, explicabo recusandae impedit tempora consequuntur consectetur nam ut?</p>
-                <div>
-                    <img src="./asset/img/avatar-01.jpg" alt="Photo Russell Stephens">
-                    <span><strong>Russell Stephens</strong></span>
-                    <p>Chef Cook</p>
+                <div class="border">
+                    <div class="titre">
+                        <h2>Discover</h2>
+                        <h3>Our store</h3>
+                    </div>
+                    <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img couverts"></span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cupiditate ex corporis repellat
+                        soluta officiis quidem dicta? Numquam excepturi distinctio enim quidem, laborum quisquam saepe
+                        libero, explicabo recusandae impedit tempora consequuntur consectetur nam ut?</p>
+                    <div>
+                        <img src="./asset/img/avatar-01.jpg" alt="Photo Russell Stephens">
+                        <span><strong>Russell Stephens</strong></span>
+                        <p>Chef Cook</p>
+                    </div>
                 </div>
             </div>
             <div class="s1-right-container">
@@ -230,15 +232,15 @@
                     </div>
 
                     <div>
-                        <input type="text" value="Name" name="name">
+                        <input type="text" placeholder="Name" name="name">
                     </div>
 
                     <div>
-                        <input type="text" value="Phone" name="phone">
+                        <input type="text" placeholder="Phone" name="phone">
                     </div>
 
                     <div>
-                        <input type="email" value="Email" name="email">
+                        <input type="email" placeholder="Email" name="email">
                     </div>
                     <button value="">Book Now</button>
                 </form>
