WIP anim header fade black

--- a/index.html
+++ b/index.html
@@ -21,33 +21,35 @@
 <body>
 
     <header>
-        <nav>
-            <div class="nav-container">
-                <h2>Resto</h2>
-                <ul>
-                    <li><a href="./asset/styles/pages/redirection.html">Home</a></li>
-                    <li><a href="./asset/styles/pages/redirection.html">Reservations</a></li>
-                    <li><a href="./asset/styles/pages/redirection.html">Menu</a></li>
-                    <li><a href="./asset/styles/pages/redirection.html">Blog</a></li>
-                    <li><a href="./asset/styles/pages/redirection.html">Pages</a></li>
-                    <li><a href="./asset/styles/pages/redirection.html">Shop</a></li>
-                    <li><a href="./asset/styles/pages/redirection.html">Contact</a></li>
-                </ul>
+        <div class="intro-anim">
+            <nav>
+                <div class="nav-container">
+                    <h2>Resto</h2>
+                    <ul class="ul-nav">
+                        <li><a href="./asset/styles/pages/redirection.html">Home</a></li>
+                        <li><a href="./asset/styles/pages/redirection.html">Reservations</a></li>
+                        <li><a href="./asset/styles/pages/redirection.html">Menu</a></li>
+                        <li><a href="./asset/styles/pages/redirection.html">Blog</a></li>
+                        <li><a href="./asset/styles/pages/redirection.html">Pages</a></li>
+                        <li><a href="./asset/styles/pages/redirection.html">Shop</a></li>
+                        <li><a href="./asset/styles/pages/redirection.html">Contact</a></li>
+                    </ul>
 
-                <ul>
-                    <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
-                </ul>
+                    <ul class="ul-social">
+                        <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
+                    </ul>
 
+                </div>
+            </nav>
+
+            <div class="text-container">
+                <h2>Welcome to</h2>
+                <h1>The Resto</h1>
+                <span class="img-couvert-blanc"><img src="./asset/img/ic-plate-big.png" alt="img couverts"></span>
+                <p>We serve only the freshest ingredients !</p>
             </div>
-        </nav>
-
-        <div class="text-container">
-            <h2>Welcome to</h2>
-            <h1>The Resto</h1>
-            <span class="img-couvert-blanc"><img src="./asset/img/ic-plate-big.png" alt="img couverts"></span>
-            <p>We serve only the freshest ingredients !</p>
         </div>
     </header>
 
