--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
                         <h2>Discover</h2>
                         <h3>Our store</h3>
                     </div>
-                    <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img couverts"></span>
+                    <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img-couverts"></span>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cupiditate ex corporis repellat
                         soluta officiis quidem dicta? Numquam excepturi distinctio enim quidem, laborum quisquam saepe
                         libero, explicabo recusandae impedit tempora consequuntur consectetur nam ut?</p>
                     <div>
-                        <img src="./asset/img/avatar-01.jpg" alt="Photo Russell Stephens">
+                        <img src="./asset/img/avatar-01.jpg" alt="Photo Russell Stephens"><br>
                         <span><strong>Russell Stephens</strong></span>
                         <p>Chef Cook</p>
                     </div>
                 </div>
             </div>
             <div class="s1-right-container">
-                <div class="img-s1-right"></div>
+                <div class="img-s1-right"><img src="./asset/img/store-01.jpg" alt=""></div>
             </div>
         </section>
 
         <section class="section2">
             <h2>Discover</h2>
-            <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img couverts"></span>
+            <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img-couverts"></span>
 
             <ul>
                 <li>Breakfast</li>
