Doing Booking section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <li>Drinks</li>
                 <li>Other</li>
             </ul>
+            <div class="img-bg"></div>
 
             <div class="menu">
                 <div class="dishe">
@@ -161,9 +162,9 @@
                     </div>
                     <div class="price">$25</div>
                 </div>
+
             </div>
 
-            <div class="img-bg"></div>
         </section>
 
         <section class="booking">
@@ -176,12 +177,12 @@
                         <h3>OPEN</h3>
                     </div>
 
-                    <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img couverts"></span>
+                    <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img-couverts"></span>
 
                     <div class="day">
                         <h3>Monday - Friday</h3>
-                        <p>7AM - 11AM(Breakfats)</p>
-                        <p>11Am - 10PM(Lunch/Dinner)</p>
+                        <p>7AM - 11AM (Breakfats)</p>
+                        <p>11Am - 10PM (Lunch/Dinner)</p>
                     </div>
 
                     <div class="day">
