hover header after anchor list

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="intro-anim">
             <nav>
                 <div class="nav-container">
-                    <h2>Resto</h2>
+                    <a href="#">
+                        <h2>Resto</h2>
+                    </a>
                     <ul class="ul-nav">
                         <li><a href="./asset/styles/pages/redirection.html">Home</a></li>
                         <li><a href="./asset/styles/pages/redirection.html">Reservations</a></li>
@@ -62,9 +64,9 @@
                         <h3>Our store</h3>
                     </div>
                     <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img-couverts"></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cupiditate ex corporis repellat
-                        soluta officiis quidem dicta? Numquam excepturi distinctio enim quidem, laborum quisquam saepe
-                        libero, explicabo recusandae impedit tempora consequuntur consectetur nam ut?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptates assumenda ea, eius
+                        laboriosam quaerat porro quas fuga dicta deserunt accusamus illo, aut asperiores adipisci soluta
+                        odio dignissimos qui veniam odit sunt quam velit.</p>
                     <div>
                         <img src="./asset/img/avatar-01.jpg" alt="Photo Russell Stephens"><br>
                         <span><strong>Russell Stephens</strong></span>
