--- a/index.html
+++ b/index.html
@@ -268,7 +268,12 @@
 
                         <div class="grid1">
                             <div class="img- event-bg1">
-                                <p class="july">08 July</p>
+                                <img src="/asset/img/event-01.jpg" alt="">
+                                <div class="july">
+                                    <p>08</p>
+                                    <p>July</p>
+                                </div>
+                                <!-- <p class="july">08 July</p> -->
                             </div>
                             <div class="white-bg">
                                 <p>Night Inspirescu Party</p>
