--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <div class="event-img-grid-container">
 
                         <div class="grid1">
-                            <div class="img- event-bg1">
+                            <div class="event-bg1">
                                 <img src="/asset/img/event-01.jpg" alt="">
                                 <div class="july">
                                     <p>08</p>
@@ -278,28 +278,41 @@
                             <div class="white-bg">
                                 <p>Night Inspirescu Party</p>
                                 <div>
-                                    <a href="https://www.google.es/maps" target="_blank"><i
-                                            class="fa-solid fa-location-dot"></i></a>
-                                    <p>Restaurant Resto</p>
-                                    <i class="fa-regular fa-clock"></i>
-                                    <p>10:00pm - 6:00am</p>
+                                    <div>
+                                        <a href="https://www.google.es/maps" target="_blank"><i
+                                                class="fa-solid fa-location-dot"></i></a>
+                                        <p>Restaurant Resto</p>
+                                    </div>
+                                    <div>
+                                        <i class="fa-regular fa-clock"></i>
+                                        <p>10:00pm - 6:00am</p>
+                                    </div>
                                 </div>
                                 <a href="">Buy Tickets</a>
                             </div>
                         </div>
 
                         <div class="grid2">
-                            <div class="img- event-bg2">
-                                <p class="july">08 July</p>
+                            <div class="event-bg2">
+                                <img src="/asset/img/event-02.jpg" alt="">
+                                <div class="july">
+                                    <p>08</p>
+                                    <p>July</p>
+                                </div>
                             </div>
                             <div class="white-bg">
                                 <p>DJ RobagRuhme</p>
                                 <div>
-                                    <a href="https://www.google.es/maps" target="_blank"><i
-                                            class="fa-solid fa-location-dot"></i></a>
-                                    <p>Restaurant Resto</p>
-                                    <i class="fa-regular fa-clock"></i>
-                                    <p>10:00pm - 6:00am</p>
+                                    <div>
+                                        <a href="https://www.google.es/maps" target="_blank"><i
+                                                class="fa-solid fa-location-dot"></i></a>
+                                        <p>Restaurant Resto</p>
+                                    </div>
+
+                                    <div>
+                                        <i class="fa-regular fa-clock"></i>
+                                        <p>10:00pm - 6:00am</p>
+                                    </div>
                                 </div>
                                 <a href="">Buy Tickets</a>
                             </div>
