Finishing event section grid3

--- a/index.html
+++ b/index.html
@@ -278,15 +278,14 @@
                             <div class="white-bg">
                                 <p>Night Inspirescu Party</p>
                                 <div>
-                                    <div>
-                                        <a href="https://www.google.es/maps" target="_blank"><i
-                                                class="fa-solid fa-location-dot"></i></a>
-                                        <p>Restaurant Resto</p>
-                                    </div>
-                                    <div>
-                                        <i class="fa-regular fa-clock"></i>
-                                        <p>10:00pm - 6:00am</p>
-                                    </div>
+
+                                    <a href="https://www.google.es/maps" target="_blank"><i
+                                            class="fa-solid fa-location-dot"></i></a>
+                                    <p>Restaurant Resto</p>
+
+                                    <i class="fa-regular fa-clock"></i>
+                                    <p>10:00pm - 6:00am</p>
+
                                 </div>
                                 <a href="">Buy Tickets</a>
                             </div>
@@ -303,16 +302,14 @@
                             <div class="white-bg">
                                 <p>DJ RobagRuhme</p>
                                 <div>
-                                    <div>
-                                        <a href="https://www.google.es/maps" target="_blank"><i
-                                                class="fa-solid fa-location-dot"></i></a>
-                                        <p>Restaurant Resto</p>
-                                    </div>
 
-                                    <div>
-                                        <i class="fa-regular fa-clock"></i>
-                                        <p>10:00pm - 6:00am</p>
-                                    </div>
+                                    <a href="https://www.google.es/maps" target="_blank"><i
+                                            class="fa-solid fa-location-dot"></i></a>
+                                    <p>Restaurant Resto</p>
+
+                                    <i class="fa-regular fa-clock"></i>
+                                    <p>10:00pm - 6:00am</p>
+
                                 </div>
                                 <a href="">Buy Tickets</a>
                             </div>
@@ -321,8 +318,11 @@
 
                         <div class="img- event-bg3 grid3">
                             <div class="white-bg">
-                                <p class="july">08 July</p>
-                                <div>
+                                <div class="july">
+                                    <p>08</p>
+                                    <p>July</p>
+                                </div>
+                                <div class="info">
                                     <p>Thousands celebrities at Johnnies Night</p>
                                     <div>
                                         <a href="https://www.google.es/maps" target="_blank"><i
