Finishing footer right part

--- a/index.html
+++ b/index.html
@@ -347,15 +347,14 @@
 
                 <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Inventore temporibus id nulla dignissimos eligendi quod suscipit officia vitae, ipsa voluptate quo
-                    molestiae, voluptatibus asperiores doloremque ad debitis culpa animi aliquam? Voluptas soluta magnam
-                    deleniti sapiente dolorem perspiciatis unde, ullam corrupti quis dolor est reprehenderit.
-                    Exercitationem, iusto? Beatae voluptates accusamus dolores?<i class="fa-solid fa-quote-right"></i>
+                    molestiae, voluptatibus asperiores doloremque ad debitis culpa animi aliquam? Voluptas soluta
+                    d dolores?<i class="fa-solid fa-quote-right"></i>
                 </p>
                 <span>Russel Stephens</span>
                 <h5>CEO - HeadPassion</h5>
             </div>
 
-            <div class="ims-bg-gmap"></div>
+            <div class="img-bg-gmap"></div>
         </secton>
     </main>
 
@@ -371,7 +370,7 @@
                 <div>
                     <h6>Newsletter</h6>
                     <form action="">
-                        <input type="text" value="Your email adress">
+                        <input type="text" placeholder="Your email adress">
                         <button>Send</button>
                     </form>
                 </div>
