End of desktop version media querry include until 900px

--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
                         <button>Send</button>
                     </form>
                 </div>
-                <div>
-                    <h6>Follow us:</h6>
+                <div class="social-media">
+                    <h6>Follow us :</h6>
                     <ul>
                         <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
