Project finito Yataaaaa

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                         <h2>Resto</h2>
                     </a>
                     <ul class="ul-nav">
-                        <li><a href="./asset/styles/pages/redirection.html">Home</a></li>
-                        <li><a href="./asset/styles/pages/redirection.html">Reservations</a></li>
-                        <li><a href="./asset/styles/pages/redirection.html">Menu</a></li>
-                        <li><a href="./asset/styles/pages/redirection.html">Blog</a></li>
-                        <li><a href="./asset/styles/pages/redirection.html">Pages</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#booking">Reservations</a></li>
+                        <li><a href="#menu">Menu</a></li>
+                        <li><a href="#event">Event</a></li>
+                        <li><a href="#Stephen">Stephen</a></li>
                         <li><a href="./asset/styles/pages/redirection.html">Shop</a></li>
-                        <li><a href="./asset/styles/pages/redirection.html">Contact</a></li>
+                        <li><a href="#footer">Contact</a></li>
                     </ul>
 
                     <ul class="ul-social">
@@ -80,96 +80,98 @@
         </section>
 
         <section class="section2">
-            <h2>Discover</h2>
-            <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img-couverts"></span>
+            <div id="menu">
+                <h2>Discover</h2>
+                <span class="img-couvert-gris"><img src="/asset/img/ic-plate.png" alt="img-couverts"></span>
 
-            <ul>
-                <li>Breakfast</li>
-                <li>Lunch</li>
-                <li>Dinner</li>
-                <li>Drinks</li>
-                <li>Other</li>
-            </ul>
-            <div class="img-bg"></div>
+                <ul>
+                    <li>Breakfast</li>
+                    <li>Lunch</li>
+                    <li>Dinner</li>
+                    <li>Drinks</li>
+                    <li>Other</li>
+                </ul>
+                <div class="img-bg"></div>
 
-            <div class="menu">
-                <div class="dishe">
-                    <img src="./asset/img/dish-item-01.jpg" alt="Pasta mushroom">
-                    <div class="description">
-                        <h4>Italian source mushroom</h4>
-                        <p>Mushroom / Garlic / Veggies</p>
+                <div class="menu">
+                    <div class="dishe">
+                        <img src="./asset/img/dish-item-01.jpg" alt="Pasta mushroom">
+                        <div class="description">
+                            <h4>Italian source mushroom</h4>
+                            <p>Mushroom / Garlic / Veggies</p>
+                        </div>
+                        <div class="price">$12</div>
                     </div>
-                    <div class="price">$12</div>
-                </div>
 
-                <div class="dishe">
-                    <img src="./asset/img/dish-item-02.jpg" alt="Fried Potatoes">
-                    <div class="description">
-                        <h4>Fried Potatoes with Garlic</h4>
-                        <p>Potatoes / Olive Oil / Garlic</p>
+                    <div class="dishe">
+                        <img src="./asset/img/dish-item-02.jpg" alt="Fried Potatoes">
+                        <div class="description">
+                            <h4>Fried Potatoes with Garlic</h4>
+                            <p>Potatoes / Olive Oil / Garlic</p>
+                        </div>
+                        <div class="price">$22</div>
                     </div>
-                    <div class="price">$22</div>
-                </div>
 
-                <div class="dishe">
-                    <img src="./asset/img/dish-item-03.jpg" alt="Tenu Roast">
-                    <div class="description">
-                        <h4>Tenu Roast Source</h4>
-                        <p>Tuna / Potatoes / Rice</p>
+                    <div class="dishe">
+                        <img src="./asset/img/dish-item-03.jpg" alt="Tenu Roast">
+                        <div class="description">
+                            <h4>Tenu Roast Source</h4>
+                            <p>Tuna / Potatoes / Rice</p>
+                        </div>
+                        <div class="price">$15</div>
                     </div>
-                    <div class="price">$15</div>
-                </div>
 
-                <div class="dishe">
-                    <img src="./asset/img/dish-item-04.jpg" alt="Roast Pork">
-                    <div class="description">
-                        <h4>Roast Pork (4 Sticks)</h4>
-                        <p>Pork / Veggies / Shoyu</p>
+                    <div class="dishe">
+                        <img src="./asset/img/dish-item-04.jpg" alt="Roast Pork">
+                        <div class="description">
+                            <h4>Roast Pork (4 Sticks)</h4>
+                            <p>Pork / Veggies / Shoyu</p>
+                        </div>
+                        <div class="price">$18</div>
                     </div>
-                    <div class="price">$18</div>
-                </div>
 
-                <div class="dishe">
-                    <img src="./asset/img/dish-item-05.jpg" alt="Salted Fried Chicken">
-                    <div class="description">
-                        <h4>Salted Fried Chicken</h4>
-                        <p>Chicken / Olive Oil / Salt</p>
+                    <div class="dishe">
+                        <img src="./asset/img/dish-item-05.jpg" alt="Salted Fried Chicken">
+                        <div class="description">
+                            <h4>Salted Fried Chicken</h4>
+                            <p>Chicken / Olive Oil / Salt</p>
+                        </div>
+                        <div class="price">$20</div>
                     </div>
-                    <div class="price">$20</div>
-                </div>
 
-                <div class="dishe">
-                    <img src="./asset/img/dish-item-06.jpg" alt="Crab with Curry">
-                    <div class="description">
-                        <h4>Crab with Curry Sources</h4>
-                        <p>Crab / Potatoes / Rice</p>
+                    <div class="dishe">
+                        <img src="./asset/img/dish-item-06.jpg" alt="Crab with Curry">
+                        <div class="description">
+                            <h4>Crab with Curry Sources</h4>
+                            <p>Crab / Potatoes / Rice</p>
+                        </div>
+                        <div class="price">$14</div>
                     </div>
-                    <div class="price">$14</div>
-                </div>
 
-                <div class="dishe">
-                    <img src="./asset/img/dish-item-07.jpg" alt="Salmon Steak">
-                    <div class="description">
-                        <h4>Imported Salmon Steak</h4>
-                        <p>Salmon / Veggies / Oil</p>
+                    <div class="dishe">
+                        <img src="./asset/img/dish-item-07.jpg" alt="Salmon Steak">
+                        <div class="description">
+                            <h4>Imported Salmon Steak</h4>
+                            <p>Salmon / Veggies / Oil</p>
+                        </div>
+                        <div class="price">$16</div>
                     </div>
-                    <div class="price">$16</div>
-                </div>
 
-                <div class="dishe">
-                    <img src="./asset/img/dish-item-08.jpg" alt="Backed Potatoes">
-                    <div class="description">
-                        <h4>Backed Potatoes Pizza</h4>
-                        <p>Potato / Bread / Cheese</p>
+                    <div class="dishe">
+                        <img src="./asset/img/dish-item-08.jpg" alt="Backed Potatoes">
+                        <div class="description">
+                            <h4>Backed Potatoes Pizza</h4>
+                            <p>Potato / Bread / Cheese</p>
+                        </div>
+                        <div class="price">$25</div>
                     </div>
-                    <div class="price">$25</div>
-                </div>
 
+                </div>
             </div>
 
         </section>
 
-        <section class="booking">
+        <section class="booking" id="booking">
 
             <div class="booking-left-container">
 
@@ -252,7 +254,7 @@
             </div>
         </section>
 
-        <section class="section-event">
+        <section class="section-event" id="event">
             <div class="section-event-container">
 
                 <div class="section-event-title">
@@ -340,25 +342,26 @@
             </div>
         </section>
 
-        <secton class="section5">
-            <div class="section5-container">
+        <secton class="section5" id="Stephen">
+            <div>
+                <div class="section5-container">
+                    <img src="./asset/img/avatar-02.jpg" alt="Russel Stephen">
 
-                <img src="./asset/img/avatar-02.jpg" alt="Russel Stephen">
-
-                <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Inventore temporibus id nulla dignissimos eligendi quod suscipit officia vitae, ipsa voluptate quo
-                    molestiae, voluptatibus asperiores doloremque ad debitis culpa animi aliquam? Voluptas soluta
-                    d dolores?<i class="fa-solid fa-quote-right"></i>
-                </p>
-                <span>Russel Stephens</span>
-                <h5>CEO - HeadPassion</h5>
+                    <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Inventore temporibus id nulla dignissimos eligendi quod suscipit officia vitae, ipsa voluptate
+                        quo
+                        molestiae, voluptatibus asperiores doloremque ad debitis culpa animi aliquam? Voluptas soluta
+                        d dolores?<i class="fa-solid fa-quote-right"></i>
+                    </p>
+                    <span>Russel Stephens</span>
+                    <h5>CEO - HeadPassion</h5>
+                </div>
             </div>
-
             <div class="img-bg-gmap"></div>
         </secton>
     </main>
 
-    <footer>
+    <footer id="footer">
         <div class="footer-container">
             <div>
                 <h2>Resto</h2>
